--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
+/* Generics */
+
 body {
     color: white;
     background-color: #414141;
+}
+
+/* Ticket Calculator */
+
+.ticket_calculator_content {
+    background-color: #888;
+    box-shadow: 0px 0px 20px 5px #525252
 }
