--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* Generics */
 
 body {
-    color: white;
     background-color: #414141;
 }
 
@@ -10,4 +9,10 @@ body {
 .ticket_calculator_content {
     background-color: #888;
     box-shadow: 0px 0px 20px 5px #525252
+}
+
+/* Ticket Results */
+
+.ticket_results_content {
+    background-color: white;
 }
