--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     box-shadow: 0px 0px 20px 5px #525252
 }
 
+#error_text {
+    color: darkred;
+    text-decoration: underline;
+}
+
 /* Ticket Results */
 
 .ticket_results_content {
